<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Projet Android Groupe 8</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_accueil">Projet Android</string>
    <string name="hello_world">Hello world!</string>
    <string name="pasDvlp">Cette option n\'est pas encore développée.</string>
    <string name="DBConnection">Echec de la connexion à la base de données</string>
    <string name="textAcc">Bienvenue</string>
    <string name="button_1">Envoyer un SMS</string>
    <string name="boutonCreerSMS">Créer un SMS</string>
    <string name="button_2">Rejoindre communauté</string>
    <string name="button_3">Créer communauté</string>
    <string name="button_4">Quitter</string>
    <string name="title_activity_choix_categorie">Choix Categorie</string>
    <string name="aucuneCategorie">Aucune catégorie !</string>
    <string name="choixCategorie">Veuillez choisir une catégorie</string>
    <string name="title_activity_choix_message">Choix Message</string>
    <string name="choixDuMessage">Choix du message</string>
    <string name="pasDeMessages">Aucun message pour cette catégorie</string>
    <string name="title_activity_modif_msg">Edition du message</string>
    <string name="editionMessage">Edition du message</string>
    <string name="pasTel">Entrez un numéro de téléphone ! </string>
    <string name="Numero">Numéro</string>
    <string name="champ">Champ</string>
    <string name="boutonModifier">Modifier</string>
    <string name="boutonEnvoyer">Envoyer</string>
    <string name="button_Retour">Retour</string>
    <string name="numChamp">Champ n° : </string>
    <string name="TitreModifMsg">Edition du message </string>
    <string name="num">Numéro : </string>
    <string name="titreChoixMsg">Choix du message</string>
    <string name="accesDB">Accès à la base de données en cours</string>
    
    <string name="title_activity_choix_communaute">Choix d\'une communauté</string>
    <string name="choixCommunaute">Veuillez choisir une communauté</string>
    <string name="title_activity_nouveau_message">Nouveau message</string>
    <string name="TitreNouvMsg">Nouveau message</string>
    <string name="soustitreNvMsg">Entrez un message</string>
    <string name="boutonAjTilda">Ajouter un champs variable</string>
    <string name="boutonEnregistrer">Enregistrer</string>
	<string name="button_RetourAcc">Retour à l\'accueil</string>
	<string name="estEnr">Enregistrement de :  </string>
	<string name="errDoublMsg">Le message existe déjà ! </string>
	<string name="titreChoixComm">Choix de la communauté</string>
	
</resources>