<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fond"
    >
    
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="be.condorcet.projetandroidgroupe8.ModifMsg" >

    <TextView
        android:id="@+id/textViewModifMsg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/TitreNouvMsg"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewModifMsg"
        android:layout_below="@+id/textViewModifMsg"
        android:layout_marginTop="15dp"
        android:text="@string/soustitreNvMsg" />

    <EditText
        android:id="@+id/editTextNvMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewMessage"
        android:layout_alignRight="@+id/boutonEnr"
        android:layout_below="@+id/textViewMessage"
        android:ems="10"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/boutonTilda"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonRetour5"
        android:layout_alignRight="@+id/buttonRetour5"
        android:layout_below="@+id/editTextNvMsg"
        android:layout_marginTop="21dp"
        android:onClick="GestTilda"
        android:text="@string/boutonAjTilda" />

    <Button
        android:id="@+id/boutonEnr"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/boutonTilda"
        android:layout_alignRight="@+id/boutonTilda"
        android:layout_below="@+id/boutonTilda"
        android:enabled="true"
        android:onClick="EnrMessage"
        android:text="@string/boutonEnregistrer" />

    <Button
        android:id="@+id/buttonRetour5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewMessage"
        android:layout_below="@+id/boutonEnr"
        android:layout_alignParentBottom="true"
        android:onClick="gestionRetourAcc"
        android:text="@string/button_RetourAcc" />

</RelativeLayout>

</ScrollView>